fix footer badge on mobile

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -40,7 +40,11 @@
 					bottom: -4rem;
 					left: -4rem;
 					@media (max-width: 600px) {
-						transform: scale(0.5);
+						left: unset;
+						right: -2rem;
+						bottom: -2rem;
+						width: 100px;
+						height: 100px;
 					}
 				}
 			}
